--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ keywords = ["penetration-test", "cybersecurity", "nmap"]
 [dependencies]
 anyhow = "^1"
 num_cpus = "^1"
-rand = "^0"
+rand = "0.8.5"
 subnetwork = "^0"
 threadpool = "^1"
 chrono = "^0"
